# rtoy

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .rubocop.yml  API.adoc  CMakeLists.txt  CMakeSettings.json  Makefile  PHILOSOPHY.adoc  README.md  RTOY.adoc  TODO  TWEEN.adoc  contest.cpp  emruby.cfg  flite.conf  flite.emconf  mrb_test.cpp  mruby.cfg  test_completer.rb  test_display.rb  toy.html
classic/: ace.rb  amazing.rb  life.rb
data/: design.txt  help.rb  intro.txt  ord  snippets.txt  words
docs/: API.adoc  PHILOSOPHY.adoc  RTOY.adoc  TODO
games/: amazing.rb  checkers.rb  galaga.rb  haunted.rb  snake.rb  sokoban.rb
ruby/: .rubocop.yml  Rakefile  boardtoy.rb  cards.rb  color.rb  complete.rb  editor.rb  extend.rb  help.rb  keymap.rb  layers.rb  location.rb  main.rb  meth_attrs.rb  music.rb  observable.rb  os.rb  piano.rb  pong.rb  readline.rb  repl.rb  shadebobs.rb  shortcuts.rb  slides.rb  snake.rb  sound.rb  split.rb  sprite.rb  tiler.rb  tiles.rb  tiles2.rb  token.rb  turtle.rb  tween.rb  ui.rb  uitest.rb  user.rb  vec2.rb  words.rb  writer.rb
ruby/boardgame/: boardgame.rb  card.rb  location.rb  observable.rb
ruby/boardgame/tests/: card_test.rb  location_test.rb  token_test.rb
ruby/tests/: location.rb  location_test.rb  token.rb  token_test.rb
src/: console.hpp  conv.hpp  eglutil.cpp  error.hpp  get_args.hpp  keycodes.h  main.cpp  mrb_tools.hpp  pi_system.cpp  pixel_console.hpp  player_linux.h  raudio.cpp  raudio.hpp  rcanvas.cpp  rcanvas.hpp  rconsole.cpp  rconsole.hpp  rdisplay.cpp  rdisplay.hpp  resampler.h  rfont.cpp  rfont.hpp  rimage.cpp  rimage.hpp  ring_buffer.hpp  rinput.cpp  rinput.hpp  rlayer.cpp  rlayer.hpp  rspeech.cpp  rspeech.hpp  rsprites.cpp  rsprites.hpp  rtimer.cpp  rtimer.hpp  sdl_system.cpp  settings.hpp  system.hpp  toy.cpp  toy.hpp
src/gl/: buffer.hpp  color.hpp  functions.hpp  gl.hpp  program.cpp  program.hpp  program_cache.cpp  program_cache.hpp  shader.cpp  shader.hpp  texture.cpp  texture.hpp  vec.hpp
src/mrb/: base.hpp  class.hpp  conv.hpp  get_args.hpp  mrb_tools.hpp
src/pix/: font.cpp  font.hpp  font_renderer.cpp  font_renderer.hpp  gl_console.cpp  gl_console.hpp  pix.cpp  pix.hpp  pixel_console.cpp  pixel_console.hpp  screen.hpp  texture_font.cpp  texture_font.hpp  tile_renderer.cpp  tile_renderer.hpp
src/tests/: mrb_args_test.cpp  mrb_conv_test.cpp  resample_test.cpp
sys/: complete.rb  doc.rb  editor.rb  extend.rb  linux.rb  main.rb  meth_attrs.rb  music.rb  os.rb  readline.rb  repl.rb  shortcuts.rb  tween.rb  vec2.rb
tests/: test_completer.rb  test_display.rb
win/mruby/: libmruby_core.lib
